gccida/c2/process_init_element
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/process_init_element/src/c-typeck.c:6995:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *inited; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/process_init_element/src/c-typeck.c:7001:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/process_init_element/src/c-typeck.c:7004:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *section_name; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/process_init_element/src/c-typeck.c:7022:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v34; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/process_init_element/src/c-typeck.c:7023:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *chain; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/process_init_element/src/c-typeck.c:7024:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *j; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/process_init_element/src/c-typeck.c:7025:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v37; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/process_init_element/src/c-typeck.c:7027:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v39; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/process_init_element/src/c-typeck.c:7029:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *range_end; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/process_init_element/src/c-typeck.c:7030:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v42; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/process_init_element/src/c-typeck.c:7031:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v43; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/process_init_element/src/c-typeck.c:7033:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v45; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/process_init_element/src/c-typeck.c:7034:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *index; // rcx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/process_init_element/src/c-typeck.c:7054:6: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
v4 = constructor_stack_0; 
     ^~~~~~~~~~~~~~~~~~~
     constructor_stack
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/process_init_element/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/process_init_element/src/c-typeck.c:7055:6: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
if ( constructor_stack_0->replacement_value ) 
     ^~~~~~~~~~~~~~~~~~~
     constructor_stack
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/process_init_element/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/process_init_element/src/c-typeck.c:7058:6: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
v4 = constructor_stack_0; 
     ^~~~~~~~~~~~~~~~~~~
     constructor_stack
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/process_init_element/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/process_init_element/src/c-typeck.c:7072:6: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
if ( constructor_stack_0->replacement_value ) 
     ^~~~~~~~~~~~~~~~~~~
     constructor_stack
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/process_init_element/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/process_init_element/src/c-typeck.c:7080:6: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
if ( constructor_stack_0->implicit ) 
     ^~~~~~~~~~~~~~~~~~~
     constructor_stack
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/process_init_element/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/process_init_element/src/c-typeck.c:7093:7: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
if ( !constructor_stack_0->implicit ) 
      ^~~~~~~~~~~~~~~~~~~
      constructor_stack
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/process_init_element/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/process_init_element/src/obj/c-typeck.o] Error 1
